# PAnotify

./: Cargo.toml  README.md  flake.nix
contrib/systemd/: panotify.service.in
nix/: home-manager.nix  package.nix
src/: main.rs  notify.rs  pulse.rs  upower.rs
