[package]
name = "panotify"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
libpulse-binding = "2.29.0"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread", "sync"] }
zbus = { version = "5.5.0", features = ["tokio", "p2p", "async-io"], default-features = false }
